<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_inputDauer"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:hint="@string/hint_dauer"
        android:inputType="number|text"
        app:layout_constraintStart_toEndOf="@+id/text_zeitAnzeige"
        app:layout_constraintTop_toBottomOf="@+id/edit_inputTermin" />

    <TextView
        android:id="@+id/text_zeitAnzeige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:text="@string/dauer"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_inputTermin" />

    <EditText
        android:id="@+id/edit_inputTermin"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:hint="@string/hint_termin"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/text_termin"
        app:layout_constraintTop_toBottomOf="@+id/button_showTimer" />

    <TextView
        android:id="@+id/text_termin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:text="@string/termin"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_showTimer" />

    <Button
        android:id="@+id/button_showTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/show_timer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>